Fix gradle references, align sbt ones with alpakka, use pre for snippets

--- a/resources/stylesheets/sass/views/_docs.scss
+++ b/resources/stylesheets/sass/views/_docs.scss
@@ -206,7 +206,7 @@
           display: none;
           background: #ededed;
           padding: 15px;
-          p {
+          p, pre {
             background-color: rgba(255, 255, 255, 0.5);
             margin: 0;
             padding: 4px;
